--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^1.1.3",
     "element-plus": "^2.2.21",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "x2js": "^3.4.4",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
+    "@types/xml": "^1.0.8",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.4",
